# intramaze

./: .dockerignore  .env.dev  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-depends  README.md  cabal.project  cabal.project.freeze  default.nix  default.nix.old  docker-compose.yml  fourmolu.yaml  interwebz.cabal  intramaze.cabal  pinksands.cabal  release.nix  shell.nix  socialmaze.cabal
app/: LICENSE-WS  Main.hs
docker/: Dockerfile  Dockerfile-dependencies  Dockerfile-depends  Dockerfile-nix  Dockerfile-nix-depends  docker-compose.test.yml  docker-compose.yml  startup.sh  web-startup.sh
docker/nginx/: static.conf
docker/postgres/: init.sql
src/: Interwebz.hs  IntraMaze.hs  PinkSands.hs  Slug.hs  Template.hs
src/Interwebz/: ActionHelpers.hs  Actions.hs  ChatWebSocket.hs  Config.hs  Database.hs  JWT.hs  JsonRequests.hs  Middle.hs  Models.hs  Static.hs
src/IntraMaze/: ActionHelpers.hs  Actions.hs  ChatWebSocket.hs  Config.hs  Database.hs  JWT.hs  JsonRequests.hs  Middle.hs  Models.hs  Static.hs
src/PinkSands/: Actions.hs  ChatWebSocket.hs  Config.hs  JWT.hs  JsonRequests.hs  Middle.hs  Models.hs  Static.hs
static/copy/: auth.js  client.js  new-room.html  portal-editor.js  rest.js  sitestyle copy.css  sitestyle.css  test.html  websocket-test.html
static/mustache/: admin.html  base.html  profile.html  room.html
static/mustache-build/: login.html  logout.html  new-room.html  register.html  rest.js  test.html
static/pending/: base.html  style2.css
tests/: Spec.hs
