cabal-version:      2.4
name:               pinksands
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  -- Base language which the package is written in.
  default-language:    Haskell2010

executable pinksands
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        pinksands
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
    import: shared-properties

library
    -- Modules exported by the library.
    import: shared-properties
    hs-source-dirs:      src
    build-depends:
        base ^>=4.14.3.0,
        text,
        uuid,
        memory,
        either,
        time,
        persistent,
        utf8-string,
        http-api-data,
        path-pieces,
        filepath,
        directory,
        libjwt-typed,
        monad-time,
        cryptonite,
        bytestring,
        monad-logger,
        cryptonite,
        mtl,
        transformers,
        aeson,
        data-default,
        wai,
        mustache,
        containers,
        unordered-containers,
        vector,
        dir-traverse,
        -- might not need wai cors FIXME
        wai-websockets,
        protolude,
        wai-cors,
        warp,
        wai-extra,
        heroku,
        scotty,
        persistent-postgresql,
        frontmatter,
        http-types
        , jose-jwt
        , regex-compat
        , text-show
        , time
    ghc-options: -Wall -Werror
    build-depends: websockets
    exposed-modules:
        PinkSands.JWT
        PinkSands
        PinkSands.Models
        PinkSands.Static
        PinkSands.ChatWebSocket
        PinkSands.Middle
        PinkSands.JsonRequests
        PinkSands.Actions
        Template